[tool.poetry]
name = "dragonflyy-main-code"
version = "0.1.0"
description = ""
authors = ["-Xenity, PikachuB2005"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
scratchapi = "^1.4.1"
replit = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
